--- a/homework/07.markdown
+++ b/homework/07.markdown
@@ -194,7 +194,7 @@ Implement any of the following features
     * the player starts with 5 unpinned rows of forest
     * start and Pin are disabled, but generate button is enabled
 
-(5 points) __Increase size of forest__
+(15 points) __Pin Single Cells__
 
 * instead of an 8x8 forest, make it something bigger
 * everything should work the same way
