--- a/homework/08.markdown
+++ b/homework/08.markdown
@@ -13,7 +13,7 @@ title: CSCI-UA.0480 - Homework #8
   <div class="panel-heading">Homework #8</div>
   <div class="panel-body" markdown="block">
 
-# AJAX - __Due Friday, April 20th by 11pm__
+# AJAX - __Due Tuesday, Dec 11th by 11pm__
 
 
 ## Overview
@@ -27,12 +27,16 @@ You'll be using the following concepts:
 
 ### Description
 
-Convert the course review site from a previous homework to a "single page app".  Use AJAX POSTs and GETs instead of regular form submissions to filter and add course reviews
+Create an app that saves random strings created by smashing the keyboard with your hands.
 
-You will:
+In the "sounds" homework assignment, the page must be reloaded whenever you want to refresh the visible data or insert more data. Most websites don't work/look like this because they use AJAX, i.e. browser-side, they write javascript that makes a web request to some api, then changes the DOM (using `document.querySelector`) when it requests an http response from the api.
 
-1. Implement routes to create an API for retrieving reviews and adding new ones
-2. Use JavaScript to trigger background requests to the API from the form submit buttons
+This assignment is to help you practice implementing that, by creating a web app for users to vent their emotions by smashing their keyboard into a text input (a `textarea` that will be saved to a database (to use later for data mining for ad targeting, of course, because... what else do you do with data, amirite?).
+
+To do this, you'll be given a partially implemented express application. You'll have to finish it up by:
+
+1. Implementing routes to create an API for retrieving smashings and adding new ones
+2. Using JavaScript to trigger background requests to the API from the form submit buttons
 
 Use the following resources as reference:
 
@@ -47,10 +51,9 @@ Check out the video below to see how the site will work. Pay attention to:
 * ...and the network tab
 * notice that there are no page refreshes!
 
-<video controls>
-  <source src="../resources/video/hw08-course-review-ajax.webm" type="video/mp4">
-	Your browser does not support the video tag.
-</video>
+
+![a browser page with the network tab of the browser inspector tools open showing a web app where entering random text adds a row of data to the table of data on the screen. the top of the page has interactive filters that filter the results below. this filtering functionality is then demonstrated by filtering for short instances of random text](https://lh00000000-public.s3.amazonaws.com/2018/appinter/hwx.gif)
+
 ### Submission Process
 
 You will be given access to a private repository on GitHub.  The final version of your assignment should be in GitHub
@@ -65,23 +68,23 @@ You will be given access to a private repository on GitHub.  The final version o
 
 ### Code Structure:
 
-__You should first create an express application that will be served on port 3000__
+__You will be given an express application that is served on port 3000.__ The structure looks like this:
 
-The structure of the directory you're given looks like this:
 
 ```
+.eslintrc.js
+.gitignore
+package-lock.json
 package.json
 src
-└── coursez
-    ├── app.js
-    ├── db.js
-    ├── public
-    │   ├── index.html  // the 'single' page in your single page web app
-    │   ├── js
-    │   │   └── main.js // write your client side JavaScript here
-    │   └── stylesheets
-    │       └── style.css
-    └── views
+├── app.js             # edit this file
+├── db.js
+└── public
+    ├── css
+    │   └── base.css
+    ├── index.html
+    └── js
+        └── index.js   # edit this file
 ```
 
 Note that this will be implemented __as a single page web app__. This means that to implement these features:
@@ -99,66 +102,67 @@ Note that this will be implemented __as a single page web app__. This means that
 	* database setup (a mongoose model, database connection, etc.) is provided through `db.js`
 	* a partially implemented Express application is in `app.js`
 		* it has basic setup for body parsing, static files, etc.
-		* it has stubs for route handlers, but the implementations are left
+		* it has some helper functions for generating smashing instances
+		* it has stubs for route handlers, with some minor parts implemented (such as forming a query object for mongoose based on query string parameters in the url)
 2. Client side code
 	* there are static files present in `public`
-	* the html (`index.html`) and css (`style.css`) are already built
-	* but the client side JavaScript is not implemented (`main.js`), so you'll have to write all of your client side code there
+	* the html (`index.html`) and css (`base.css`) are already built
+	* but the client side JavaScript is mostly left unimplemented (`index.js`), so you'll have to flesh out the majority of the function definitions
 
 ### Fetching and Filtering:
 
-1. Finish the route, `GET /api/messages`, which returns all of the existing reviews in the database
-    1. This route will support some of the same query string parameters as the course review assignment: year and semester
-    2. It should return JSON list of review objects. For example, `GET /api/messages?year=2018
-could return:
-        ```
-[
-  { "name":"Course 1", ... },
-  { "name":"Course 2", ... }
+1. Finish the route, `GET /api/smashings` (in `app.js`, __the server__), which returns all of the existing smashing in the database
+    1. This route will support several query string paremeters (you can see them in the names of the form's input elements)
+    2. It should return JSON list of smashing objects. For example, `GET /api/smashings?lengthGt=2&lengthLt=55555`  (note that smashings is plural, not singular!) could return:
+		<pre><code data-trim contenteditable>[
+  {smashingText: 'aaa', length: 3, etc.}, 
+  {smashingText: 'asdf', length: 4, etc.}
 ]
-```
-	3. Note that the model only contains these properties (which are less than the previous assignment):
-		* `name` - the course name
-		* `semester` - the course semester
-		* `year` - the year the course was offered
-		* `review` - the text of the course review
-    4. To test, add some data into your database manually using the commandline mongo client using the properties supplied above
-	5. enter the url `http://localhost:3000/api/messages` in your browser; you should get JSON back... with the JSON containing the reviews that you entered through the commandline
-2. Add some JavaScript to `src/public/js/main.js` so that once the page loads:
-    1. a background request is made to the the api url above using `XMLHttpRequest`
-	2. no query string parameters should be present, so all of the reviews should be present in the response
-	3. parse the response to get a collection of reviews
-	3. add the reviews to the `tbody` element of the `table` as rows and table data (`tr` and `td`)
-	4. use `document.createElement` to do this (avoid using `innerHTML`)
-	5. at the end of this task, on initial page load, your application will make a background call to load all of the reviews in the database, so the page should have both the form and a table populated with reviews
-3. Using JavaScript in `main.js`, modify the form so that when the button is pressed:
-    1. the regular form button press event isn't triggered (use `preventDefault`)
-    2. instead, the values in the filter form field are retrieved from their elements and are used to construct the url to be requested (use the `.value` property of the form element)
-	3. construct the url by using the base path, `/api/messages` and add a query string by concatenating `semester` and `year` to it
-    4. make a background request to the url you construct using `XMLHttpRequest`
-    5. when the JSON is returned, it should be parsed into a list of objects representing reviews
-    6. use those review objects to replace the contents of the table on the page (for example, you could remove all the children in `tbody` using `parentElement.removeChild(childElementToRemove)`
-    7. filtering with a blank field removes that field from the filter (so if semester were empty string, all semesters are allowed)
+</code></pre>
+    3. To test, add some data into your database manually using the commandline mongo client using the properties supplied above (you can skip the letter counts to make things easier)
+	4. enter the url `http://localhost:3000/api/smashings` in your browser; you should get JSON back... with the JSON containing the smashings that you just entered
+	5. enter the url again... but now with query string parameters (such as lengthGt=2) to see if the filtering part works
+2. Add some JavaScript to `src/public/js/index.js` (__the client side JavaScript__)so that once the page loads:
+    1. a background request is made to the the api url above using `XMLHttpRequest` or `fetch`
+	2. do this by finishing the implementations in `index.js` for the following functions (fill in the parts underneath the comments that start with `TODO`):
+		* `insertSmashing` to insert data from a single smashing instance into the DOM given an object representing the smashing
+		* `deleteAllResults` to remove all of the smashings displayed in the DOM
+		* `refreshResults` to retrieve filtered (or unfiltered if the form is not filled) smashing data from the api and display its results (you can use some of the functions above to do this)
+			* you'll use `XMLHttpRequest` or `fetch` here 
+			* the url will either be `/api/smashings` or `/api/smashings?foo=bar&baz=qux` (the query string will be composed of names and values from the form input elements in the filter form)
+		* `main` to add event handlers and show the initial data on page load
+		* ⚠️  __remember to make sure that the regular form button press event isn't triggered (use `preventDefault`)__
+	3. detailed descriptions of each function is in comments within the source code
+	4. test by:
+		* going to the page and verifying that all smashings are loaded
+		* open your network tab to see an `xhr` request to `api/smashings`
+		* using the form to filter and verifying that the results on the page are updated without a page refresh
+		* again, check your network tab to see an `xhr` request to `api/smashings`... but note that the request should have query string parameters attached to it
 
 
 ### Adding New Reviews
 
-1. In the route, `POST /api/message`,  create a new review
-    * it should give back a JSON object as the response
-    * it should send back the object inserted, if successful
-    * otherwise, send back an object with a key called error... with a value containing an error message
-2. The normal behavior of forms will need to be modified so that when the add button is pressed:
-    * the regular form button press event isn't triggered (use `preventDefault`)
-    * ... and instead, the values in the add form are retrieved
-    * a background request is made to the url
-        * remember to set content type: `req.setRequestHeader("Content-type", "application/x-www-form-urlencoded");`
-        * in <code>res.send</code>, make sure to add the form data as name value pairs: <code>"name1=value1&name2=value2&nameN=valueN"</code>
-    * when a response is retrieved, repopulate the table so that the new review is added
-    * __if there was a filter set before adding, then clear the filter to show all reviews, including the newly added one__
-
-See the movie from earlier in the instructions to check out an example of adding a review (pay close attention to the network tab showing the requests).
-
+1. In the route, `POST /api/smashing` (in `app.js`, __the server__),  create a new smashing document and save it in the database
+    * it should give back a JSON object as the response: `{"_code": "OK"}` or, if there's an error, `{"_code": "ERROR"}` 
+2. In `index.js`, __the client-side JavaScript__ ...
+	1. finish the implementation of the following functions (fill in the parts underneath the comments that start with `TODO`).
+		* `postSmashing` to send a POST request to save smashing data in the database
+			* using `XMLHttpRequest` or `fetch`, make a POST request
+			* set the `ContentType` to `application/x-www-form-urlencoded`
+			* set the body to the value of the textarea
+			* the response should trigger the client to refresh the data on the page with the newly created smashing (note, not a page refresh, but just updated DOM elements)
+    		* __if there was a filter set before adding, then clear the filter to show all reviews, including the newly added one__
+			* use existing helper functions within `index.js` to aid in this implementation
+		* `main` (you may have have finished this already) to add an event listener to handle a button press for the form to create a keyboard smashing
+    		* remember to make sure that the regular form button press event isn't triggered (use `preventDefault`)
+	2. more details for these functions can be found in the comments
+	3. test this by:
+		* openining the network tab
+		* submitting the form
+		* viewing the `xhr` POST request in the network tab
+ 		* verifying that the data is saved in the database by using the `mongo` commandline client
+		* verifying that the new saved smashing also shows up on the page (without a page refresh)  
+</div>
 </div>
 
-</div>
 
